--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,46 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+* {
   font-family: "Onest", sans-serif;
+}
+
+body {
   font-size: 1rem;
   line-height: 1.5;
   background-color: #ccc;
+  padding: 20px;
+  margin: 0;
   display: flex;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 20px;
-  border: 1px solid #ccc;
+  max-height: calc(100vh - 40px);
+  background-color: white;
   border-radius: 8px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  background-color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
   padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid #e7edf4;
-  margin: 0;
+  border-radius: 8px 8px 0 0;
 }
 
 header h2 {
@@ -44,10 +59,31 @@ nav a {
   font-weight: 500;
   color: #0d151c;
   text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+nav a:hover {
+  color: #0a80ed;
 }
 
 .main-content {
+  scroll-behavior: smooth;
+  flex: 1;
+  overflow-y: auto;
   padding: 1rem 2rem;
+}
+
+.main-content::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+}
+.main-content::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 4px;
+}
+
+.main-content::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
 }
 
 .title {
@@ -70,11 +106,13 @@ nav a {
   border-radius: 12px;
   border: 2px solid #ccc;
   width: 400px;
+  transition: all 0.3s ease;
 }
 
 #task-input:focus {
   border-color: #0a80ed;
   outline: none;
+  transform: scale(1.03);
 }
 
 #add-task-btn {
@@ -88,7 +126,7 @@ nav a {
 
 #add-task-btn:hover {
   background-color: #0969c4;
-  transform: translateY(-2px) scale(1.05);
+  transform: translateY(-2px) scale(1.03);
   cursor: pointer;
 }
 
@@ -154,23 +192,23 @@ nav a {
 .complete-task {
   background-color: #10b981;
   color: white;
+  transition: all 0.3s ease;
 }
 
 .complete-task:hover {
   background-color: #059669;
   transform: translateY(-2px) scale(1.05);
-  transition: all 0.3s ease;
 }
 
 .delete-task {
   background-color: #ef4444;
   color: white;
+  transition: all 0.3s ease;
 }
 
 .delete-task:hover {
   background-color: #dc2626;
   transform: translateY(-2px) scale(1.05);
-  transition: all 0.3s ease;
 }
 
 .no-tasks-message {
